--- a/cppciphers.html
+++ b/cppciphers.html
@@ -98,21 +98,21 @@ Beaufort variant (Key is lowercase alphabetic textstring.)
 <div>
 <label>
 <input type="radio" name="cipher" value="SlideI">
-Slide Type I (Key is lowercase alphabetic textstring.)
+Slide Type I (Key is 2 lowercase alphabetic textstrings.)
 </label>
 </div>
 
 <div>
 <label>
 <input type="radio" name="cipher" value="SlideII">
-Slide Type II (Key is lowercase alphabetic textstring.)
+Slide Type II (Key is 2 lowercase alphabetic textstrings.)
 </label>
 </div>
 
 <div>
 <label>
 <input type="radio" name="cipher" value="SlideIII">
-Slide Type III (Key is lowercase alphabetic textstring.)
+Slide Type III (Key is 2 lowercase alphabetic textstrings.)
 </label>
 </div>
 
